<resources>
    <string name="app_name">Calculator</string>
    <string name="bt0">0</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="bplus">+</string>
    <string name="bmin">-</string>
    <string name="bdiv">/</string>
    <string name="bmul">*</string>
    <string name="bequals">=</string>
    <string name="clear">clr</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
