<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.baabtra.joelgeorge.calculator.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:layout_marginTop="1dp"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="#ffffff"
            android:text="0"
            android:textColor="#000000"
            android:id="@+id/textView2"
            android:layout_marginTop="32dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />








        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/bt1"
                android:text="@string/b1" />
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/bt2"
                android:text="@string/b2"
                />
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/bt3"
                android:text="@string/b3"
                />
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/plus"
                android:text="@string/bplus"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/bt4"
                android:text="@string/b4"
                />
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/bt5"
                android:text="@string/b5"
                />
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/bt6"
                android:text="@string/b6"
                />
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/min"
                android:text="@string/bmin"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/bt7"
                android:text="@string/b7"
                />
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/bt8"
                android:text="@string/b8"
                />
            <Button
                android:layout_width="50dp"
                android:id="@+id/bt9"
                android:layout_height="50dp"
                android:text="@string/b9"
                />
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/mul"
                android:text="@string/bmul"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/bt0"
                android:text="@string/bt0"
                />
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/equals"
                android:text="@string/bequals"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/clear"
                android:text="@string/clear"
                />

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/div"
                android:text="@string/bdiv"
                />



        </LinearLayout>
    </LinearLayout>




</RelativeLayout>